# UbuLT-dev

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md
face_recognition_system/: .env  .pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
face_recognition_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
face_recognition_system/face_recognition_system.egg-info/: PKG-INFO  SOURCES.txt
face_recognition_system/src/: main.py
face_recognition_system/src/services/: webhook.py
logs/: recognition_log.csv  recognitions.json
