[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face_recognition_system"
version = "1.0.0"
description = "A face recognition system using FastAPI"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "loguru>=0.5.3",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/face_recognition_system"

[project.scripts]
face_recognition_system = "src.main:main"

[tool.setuptools]
packages = ["src"]
