[metadata]
name = face_recognition_system
version = 1.0.0
author = Lelik
author_email = your.devkerch@gmail.com
description = A face recognition system using FastAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/face_recognition_system
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.68.0
    uvicorn>=0.15.0
    pydantic>=1.8.0
    loguru>=0.5.3
    setuptools>=42.0.0

[options.entry_points]
console_scripts =
    face_recognition_system = src.main:main

[options.packages.find]
exclude =
    tests
    tests.*

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
